<resources>
    <string name="app_name" translatable="false">Maveri_V2</string>

    <!--Launch Activity-->
    <string name="Launch_sign_in">Sign in</string>
    <string name="Launch_sign_up">Registration</string>

    <!--Sign In-->
    <string name="Signin_title">Sign In</string>
    <string name="Signin_input_phone">Your number phone</string>

    <!--Sign In-->
    <string name="Signup_title">Registration</string>
    <string name="Signup_input_phone">Your number phone</string>
    <string name="Signup_input_name">Your name</string>
    <string name="Signup_text_age">Your age</string>
    <string name="Signup_text_sex">Your sex</string>
    <string name="Signup_switch_male">Male</string>
    <string name="Signup_switch_female">Female</string>
    <string name="Signup_continue">Continue</string>

    <!--Navigation Main Menu-->
    <string name="Nav_mainmenu_button_messages">Messages</string>
    <string name="Nav_mainmenu_button_friends">Friends</string>
    <string name="Nav_mainmenu_button_meetings">Meetings</string>
    <string name="Nav_mainmenu_button_sitting">Sitting</string>

    <!--Navigation Friends-->
    <string name="Nav_friends_button_all">All\nfriends</string>
    <string name="Nav_friends_button_online">Online\nfriends</string>

    <!--Navigation Meetings-->
    <string name="Nav_meetings_button_all">All\nmeetings</string>
    <string name="Nav_meetings_button_my">My\nmeetings</string>

    <!--Navigation Chat-->
    <string name="Nav_chat_button_chat">Chat</string>
    <string name="Nav_chat_button_meeting">Our\nmeetings</string>

    <!--My profile-->
    <string name="Profile_friends">Friends</string>
    <string name="Profile_meeting">My meeting</string>
    <string name="Profile_my_city_meeting">Meeting in my city</string>
    <string name="Profile_all_meeting">Show all</string>
    <string name="Profile_meeting_text_persons">persons</string>


</resources>