<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vector_standard_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_signup_input_phone"
            android:theme="@style/Theme.EditText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/Signup_input_phone"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_signup_input_name"
            android:theme="@style/Theme.EditText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/Signup_input_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:layout_gravity="center"
            android:text="@string/Signup_text_age"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_signup_age"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:layout_gravity="center"
            android:text="@string/Signup_text_sex"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Signup_switch_male"
                android:textColor="@color/colorBlack"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbtn_signup_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbtn_signup_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Signup_switch_female"
                android:layout_marginLeft="1dp"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_launch_sign_up"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:layout_gravity="center"
            android:background="@drawable/background_button"
            android:textColor="@color/colorWhite"
            app:cornerRadius="20dp"
            android:text="@string/Signup_continue"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>